# trace-python

./: .gitconfig  .gitignore  Dockerfile  README.md  Test case analysis.ipynb  Trace-reduced.ipynb  Trace.ipynb  Untitled.ipynb  data_set.txt  dump_analyser.py  faiss.py  interesting_names.txt  process.sh  proj.sh  pylama.ini  pyproject.toml  reduce.py  trace_parse.py  train_model.py
notebooks/: 0.0-Untitled.ipynb  0.1-Untitled.ipynb  2.0-length-vs-calls.ipynb  3.0-Interpret.ipynb  3.0-TraceBERT.ipynb  3.1-Interpret-only.ipynb  3.2-Experiment.ipynb  3.3-TSNE.ipynb
scripts/: commands.md  edge_cases.md  inspect_for_testcases.py  process.sh  reduce.py  scripts.sh  trace_parse.py  trace_parsing.py  train_model.py
