[tool.poetry]
name = "trace-python"
version = "0.1.0"
description = ""
authors = ["Claudio Spiess <claudiosv@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
matplotlib = "^3.5.0"
jupyter = "^1.0.0"
pylama = "^8.3.7"
black = {extras = ["jupyter"], version = "^22.1.0"}
isort = "^5.10.1"
seaborn = "^0.11.2"
pyarrow = "^7.0.0"
fastparquet = "^0.8.0"
orjson = "^3.6.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
